# Titus

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/Files/: File.h  FileDriver.h  FilePath.h  FileSystem.h
include/Files/Drivers/: UnixFileDriver.h
include/Resources/: Ref.h  ResourceManager.h  TestResource.h
include/core/: Component.h  Config.h  Subsystem.h
include/core/testing/: TestComponent.h  TestSubsystem.h
include/files/: File.h  FileDriver.h  FilePath.h  FileSystem.h  FileSystemType.h
include/files/Drivers/: UnixFileDriver.h
include/rendering/: RenderComponent.h  RenderSubsystem.h  Renderer.h  UiComponent.h
include/rendering/vulkan/: VulkanDescriptorSetAllocator.h  VulkanDevice.h  VulkanPipelineLayout.h  VulkanRenderer.h  VulkanRenderpass.h  VulkanSwapchain.h  VulkanUtils.h
include/rendering/vulkan/managers/: VulkanDescriptorManager.h  VulkanShaderModuleManager.h  VulkanShaderModuleResource.h
include/rendering/vulkan/resources/: VulkanMaterial.h  VulkanShader.h
include/resources/: Ref.h  Resource.h  ResourceManager.h  TestResource.h
include/scene/: Node.h  Scene.h
include/utils/: Hasher.h
resources/: testConfig.json  testMaterial.json  testMaterialCopy.json
resources/test_shaders/: test.frag  test.vert
src/Files/: FileSystem.cpp
src/Resources/: ResourceManager.cpp  TestResource.cpp
src/core/: Config.cpp
src/core/testing/: TestComponent.cpp  TestSubsystem.cpp
src/files/: FileSystem.cpp
src/rendering/: RenderComponent.cpp  RenderSubsystem.cpp  UiComponent.cpp
src/rendering/vulkan/: VulkanDescriptorSetAllocator.cpp  VulkanDevice.cpp  VulkanPipelineLayout.cpp  VulkanRenderer.cpp  VulkanRenderpass.cpp  VulkanSwapchain.cpp  VulkanUtils.cpp
src/rendering/vulkan/managers/: VulkanDescriptorManager.cpp  VulkanShaderModuleManager.cpp  VulkanShaderModuleResource.cpp
src/rendering/vulkan/resources/: VulkanMaterial.cpp  VulkanShader.cpp
src/resources/: ResourceManager.cpp  TestResource.cpp
src/scene/: Node.cpp
